<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LightBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/weather"
            style="@style/LightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/halftone_rain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather" />

        <TextView
            android:id="@+id/temp"
            style="@style/LightValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/temp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture" />

        <TextView
            android:id="@+id/location"
            style="@style/LightDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp" />

        <TextView
            android:id="@+id/date"
            style="@style/LightDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <LinearLayout

            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/date">

            <TextView
                style="@style/LightValues"
                android:id="@+id/windVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/wind" />

            <TextView
                style="@style/LightDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WindFlow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/wind"
            app:layout_constraintRight_toLeftOf="@id/humidity"
            app:layout_constraintTop_toBottomOf="@+id/date">

            <TextView
                style="@style/LightValues"
                android:id="@+id/pressureVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pressure" />

            <TextView
                style="@style/LightDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pressure" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/pressure"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date">

            <TextView
                style="@style/LightValues"
                android:id="@+id/humidityVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/humidity" />

            <TextView
                style="@style/LightDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Humidity" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressure">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150sp"
                    android:orientation="vertical">
                    <TextView
                        style="@style/LightValues"
                        android:id="@+id/day1temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp1" />

                    <ImageView
                        android:id="@+id/day1picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/small_halftone"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/day1"
                        style="@style/LightDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150sp"
                    android:orientation="vertical">
                    <TextView
                        style="@style/LightValues"
                        android:id="@+id/day2temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp2" />

                    <ImageView
                        android:id="@+id/day2picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/small_sun"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/LightDetails"
                        android:id="@+id/day2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150sp"
                    android:orientation="vertical">
                    <TextView
                        style="@style/LightValues"
                        android:id="@+id/day3temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp3" />

                    <ImageView
                        android:id="@+id/day3picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/small_halftone"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/day3"
                        style="@style/LightDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150sp"
                    android:orientation="vertical">
                    <TextView
                        style="@style/LightValues"
                        android:id="@+id/day4temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp4" />

                    <ImageView
                        android:id="@+id/day4picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/small_rain"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/day4"
                        style="@style/LightDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150sp"
                    android:orientation="vertical">
                    <TextView
                        style="@style/LightValues"
                        android:id="@+id/day5temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp5" />

                    <ImageView
                        android:id="@+id/day5picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/small_sun"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/day5"
                        style="@style/LightDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150sp"
                    android:orientation="vertical">
                    <TextView
                        style="@style/LightValues"
                        android:id="@+id/day6temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp6" />

                    <ImageView
                        android:id="@+id/day6picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/small_rain"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/day6"
                        style="@style/LightDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>